--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "keywords": [],
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
+    "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   },
